# articutool_ros2

./: .gitignore  98-articutool-usb-devices.rules  Dockerfile.articutool  Dockerfile.ros2_humble_base  docker-compose.yaml  docker-entrypoint.sh  entrypoint.sh  requirements.txt
articutool_control/: package.xml  setup.cfg  setup.py
articutool_control/articutool_control/: articutool_kinematics.py  controller_switcher.py  orientation_control.py  primitives.py  send_trajectory_action_client.py  send_trajectory_client.py  trajectory_execution_server.py
articutool_control/test/: test_flake8.py
articutool_description/: CMakeLists.txt  package.xml
articutool_description/config/: tool_tip_configurations.yaml
articutool_description/controllers/: controllers.yaml
articutool_description/launch/: articutool.launch.py  articutool.rviz  articutool_description.launch.py
articutool_description/meshes/: electronics_holder.stl  electronics_holder_bottom_plate.stl  electronics_holder_upper_plate.stl  electronics_holder_wire_guard.stl  fork_tool.stl  fr12_h103.stl  ft_nano25.stl  handle_cover_kg2.stl  motor_xc430.stl  motor_xc430_stabilizer.stl  motor_xc430_to_ft_hex21_adapter.stl  spoon_tool.stl  u2d2.stl  (+1 more)
articutool_ft/: package.xml  setup.cfg  setup.py
articutool_imu/: package.xml  setup.cfg  setup.py
articutool_interfaces/: CMakeLists.txt  package.xml
articutool_moveit/: CMakeLists.txt  package.xml
articutool_moveit/config/: articutool.ros2_control.xacro  articutool.srdf  articutool.urdf.xacro  controllers.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml
articutool_moveit/launch/: articutool_moveit.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
articutool_orientation/: package.xml  setup.cfg  setup.py
articutool_perception/: package.xml  setup.cfg  setup.py
articutool_system/: package.xml  setup.cfg  setup.py
dynamixel_hardware/: dynamixel_hardware.xml
(+40 files in other folders)
